# rust-camera-dolly

./: .gitignore  Cargo.toml  Dockerfile  README.md  arduino.yaml  avr-atmega328p.json  build.rs  build_image.sh  flash.sh
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
app/src/dolly/: mod.rs
arduino_core/: Cargo.toml
arduino_core/src/: serial.rs
binding/: Cargo.toml  arduino.yaml  build.rs
binding/src/: lib.rs
binding/src/bindings/: c_bindings.rs
binding/src/lcd_display/: mod.rs
binding/src/liquid_crystal/: mod.rs
drivers/: Cargo.toml
drivers/src/: accelstepper.rs  irremote.rs  joystick.rs  lib.rs  switch.rs
drivers/src/arduino/: adc_manager.rs  io.rs  mod.rs
drivers/src/arduino/pins/: analog_pin.rs  digital_pin.rs  mod.rs
drivers/src/timer/: mod.rs  tc0.rs  tc1.rs
src/: arduino.rs  main.rs  serial.rs
src/dolly/: joystick.rs  mod.rs
src/dolly/components/: irremote.rs  joystick.rs  mod.rs
src/dolly/components/arduino/: adc_manager.rs  io.rs  mod.rs
src/dolly/components/arduino/bindings/: mod.rs
src/dolly/components/arduino/pins/: analog_pin.rs  digital_pin.rs
src/dolly/components/stepper/: mod.rs
src/dolly/motor/: mod.rs  step_motor.rs
src/dolly/stepper/: mod.rs
src/timer/: mod.rs  tc0.rs  tc1.rs
