[package]
name = "rust-camera-dolly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
libm = "0.2.8"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "8ab27dc"
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "8ab27dc"

[dependencies.avr-device]
version = "0.5.3"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
