[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
libm = "0.2.8"
infrared = "0.14.2"
void = { version = "1.0.2", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "8ab27dc"
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "8ab27dc"

[dependencies.avr-device]
version = "0.5.3"

[dependencies.accel-stepper]
path = "../accel-stepper"
